# HomeWorkMult-4

./: CMakeLists.txt  HomeWorkMult-4.cpp  README.md  circle.cpp  circle.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  line.cpp  line.h  parameters.h  point.h  shape.cpp  shape.h  square.cpp  square.h  transform.cpp  transform.h
